--- a/netflix-clone/src/index.css
+++ b/netflix-clone/src/index.css
@@ -1,4 +1,4 @@
-/* 
+
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lexend:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 :root {
@@ -15,4 +15,4 @@
 }
 body {
   background: #111;
-} */
+}
